# power-cap-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
data/: pwr-cap-rs.json
example-config/: pwr-cap-rs.json
modules/: default.nix  pwr-cap-rs.nix
src/: main.rs  profile.rs  system.rs
